--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.16"
   },
-  "description": ""
+  "description": "Web Responsive de Eventos - CoderHouse"
 }
